Tue Jun 22 22:00:06 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb: suppress warnings.

Tue Jun 22 21:33:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/optparse/test_summary.rb: fixed superclass so that it run
	  solely.

Tue Jun 22 19:57:33 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (shadowing_lvar_gen): should add lvar to vars and
	  used.  [ruby-dev:41666]

Tue Jun 22 13:23:13 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/delegate.rb: Forward #trust, #untrust, #taint and #untaint
	  to both the delegator and __getobj__ [ruby-core:26138]

Mon Jun 21 23:41:08 2010  wanabe  <s.wanabe@gmail.com>

	* eval_error.c (error_print): clear raised_flag while error-printing
	  to avoid hang. [ruby-core:27608]

	* test/ruby/test_beginendblock.rb (test_endblock_raise): add test for
	  above.

Sun Jun 20 16:17:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* id.c (Init_id): add underscore name.

	* parse.y (warn_unused_var): ignore underscore name.

	* parse.y (warn_unused_var): use same format as shadowing local
	  variable.

	* parse.y (shadowing_lvar_gen): get rid of adding extra name for
	  shadowing local variable.  [ruby-dev:41628]

Sat Jun 19 11:11:37 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/irb.rb: remove double exclamation marks.  a patch from Diego
	  Viola.  [ruby-core:30589]

Sat Jun 19 03:35:58 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb (resolve_klass): fix the
	  exception message when attempting to load an unknown class.  Thanks
	  nobu! [ruby-dev:41399]

	* test/psych/test_psych.rb: test for the exception message

Fri Jun 18 10:37:46 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* gc.c (gc_lazy_sweep): clean a warning.
	  "suggest parentheses around assignment used as truth value"

	* transcode_data.h (getGB4bt1): clean a warning.
	  "suggest parentheses around arithmetic in operand of |"

	* transcode_data.h (getGB4bt3): ditto.
